--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Kontestis"
+      content="parking"
     />
-    <title>Kontestis</title>
+    <title>parking</title>
     <link rel="icon" type="image/png" href="/favicon_light.png" media="(prefers-color-scheme: light)">
     <link rel="icon" type="image/png" href="/favicon_dark.png" media="(prefers-color-scheme: dark)">
 
